# BinTable

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
scripts/: build-deb.sh
src/: main.cpp
src/app/: Application.cpp  Application.h
src/db/: ConnectionConfig.h  ConnectionFactory.cpp  ConnectionFactory.h  ConnectionManager.cpp  ConnectionManager.h  IConnection.h  QueryResult.h  SchemaInfo.h
src/db/postgres/: PostgresConnection.cpp  PostgresConnection.h
src/services/: ConnectionService.cpp  ConnectionService.h  ConnectionStoreService.cpp  ConnectionStoreService.h  SessionService.cpp  SessionService.h
src/ui/: ConnectionPanel.cpp  ConnectionPanel.h  Controls.cpp  Controls.h  DocumentTab.h  DocumentTabs.cpp  DocumentTabs.h  NewConnectionPopup.cpp  NewConnectionPopup.h  ResultsTable.cpp  ResultsTable.h  dark_style.h
src/ui/DocumentTab/: DocumentData.h  DocumentTab.cpp  DocumentTab.h
src/ui/DocumentTab/QueryTab/: QueryTab.cpp  QueryTab.h
src/ui/DocumentTab/TableViewTab/: TableViewTab.cpp  TableViewTab.h
src/ui/SideBar/: SideBar.cpp  SideBar.h
src/ui/TableView/: ResultsTable.cpp  ResultsTable.h
